# nyc_dagster

./: .gitignore  README.md  pyproject.toml
dagster_university/: __init__.py
dagster_university/assets/: metrics.py  requests.py  trips.py
dagster_university/jobs/: __init__.py
dagster_university/schedules/: __init__.py
dagster_university/sensors/: __init__.py
data/outputs/: trips_by_week.csv
data/staging/: manhattan_stats.geojson
