[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
readme = "README.md"
repository = "https://github.com/Fixer38/nyc_dagster"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8,<3.13"
dagster = "^1.7.0"
dagster-webserver = "*"
dagster-cloud = "*"
dagster-duckdb = "*"
geopandas = "*"
kaleido = "0.2.1"
pandas = "*"
plotly = "*"
shapely = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pyarrow = "*"

[tool.dagster]
module_name = "dagster_university"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
extend-ignore = [

  # (Unused import): We stub some files with just imports to help people get started
  "F401",    
  # (Import block is un-sorted or un-formatted): It's more important that we introduce the imports in the order they're used rather than alphabetically.
  "I001",
]
